# simulateur-retraite

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
config/: constants.yaml
scripts/: check_poetry_lock.sh
src/: __init__.py  calcul_retraite.py  constants.py  investissement_vs_marche.py  settings.py  sliders.py  utils.py
