[tool.poetry]
name = "simulateur-retraite"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
altair = "^5.5.0"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
python = "~3.12.0"
streamlit = "^1.43.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"
jupyterlab = "^4.1.0"
jupytext = "^1.16.1"
mypy = "^1.15.0"
pandas-stubs = "^2.2.0.240218"
pre-commit = "^4.0.1"
pylint = "^3.0.3"
pylint-pydantic = "^0.3.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
show_column_numbers = true
scripts_are_modules = true
no_implicit_optional = false
strict_optional = false
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "pandera.mypy"]

[tool.pycodestyle]
convention = "google"
add-ignore = ["D100", "D102", "D103", "D104", "D107"]

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"notebooks/py_notebooks/" = "py:percent"
